Pygments changelog
==================

Version 0.6
-----------
(released Nov XX, 2006)



Version 0.5.1
-------------
(released Oct 30, 2006)

- Fix traceback in ``pygmentize -L`` (thanks to Piotr Ozarowski).


Version 0.5
-----------
(released Oct 30, 2006)

- Initial public release.