@@ -5,6 +5,8 @@ Version 0.6
 -----------
 (released Nov XX, 2006)
 
+- Some improvements in the C(++) lexers handling comments and line
+  continuations.
 
 
 Version 0.5.1
